<resources>
    <string name="app_name">&lt; DevBytes /&gt;</string>
    <string name="pass_hint">Password</string>
    <string name="mail_hint">Email</string>
    <string name="login_head">Log In</string>
    <string name="signup_head">Sign Up</string>
    <string name="login_signup_message">Don\'t have an account?</string>
    <string name="signup_login_message">Already have an account?</string>
    <string name="name_hint">Name</string>
    <string name="conf_pass_hint">Confirm Password</string>
    <string name="action_searchTitle">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="setting_update">Save Settings</string>
    <string name="demo_title">Tech Update Title</string>
    <string name="demo_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </string>
    <string name="title_hint">Add Title...</string>
    <string name="desc_hint">Post Description....</string>
    <string name="post_btn">Post</string>
    <string name="cardViewTitle">Card View Layout</string>
    <string name="title_feed">Feed</string>
    <string name="title_bytes">Bytes</string>
    <string name="title_notification">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_post">Username</string>
    <string name="date_post">Posting date</string>
    <string name="byte_title">Byte Title</string>
    <string name="byte_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="byte_image">Byte Image</string>
    <string name="noLikes">0 Likes</string>
    <string name="notifMessage">No Notifications</string>
    <string name="feed_body">Feed Body</string>
    <string name="feed_author">Feed Author</string>
    <string name="feed_title">Feed Title</string>
</resources>