<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePost">

    <include
        android:id="@+id/createPostToolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/createPostTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPostToolbar"
        android:src="@drawable/user_default"  />

    <EditText
        android:id="@+id/createPostTitle"
        android:layout_width="344dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_marginTop="50dp"
        android:hint="@string/title_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
    <EditText
        android:id="@+id/createPostDesc"
        android:layout_width="344dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_marginTop="50dp"
        android:gravity="start|top"
        android:hint="@string/desc_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPostTitle" />


    <Button
        android:id="@+id/createPostBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_shape"
        android:text="@string/post_btn"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPostDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>